--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "^16.13.0",
+    "react-collapsible": "^2.7.0",
     "react-dom": "^16.13.0",
     "react-google-calendar-api": "^1.0.11",
-    "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
